# HubSpot-Connectors

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  PRODUCTION.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  main.py  nginx.conf  pyproject.toml  refactor.py  refactor_2.py  render.yml  requirements.txt  slack_manifest.json  slack_manifest.yml  tmp_script.py  tree.txt  user_operations_guide.md  workflow.md
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  hubspot.py  middleware.py  router.py  slack.py
app/api/hubspot/: actions_router.py  ai_cards_router.py  client.py  install_router.py  oauth_router.py  oauth_router_old.py  router.py  schemas.py  service.py  webhook_router.py  webhook_router_old.py
app/api/public/: contact_router.py  privacy_router.py  terms_router.py
app/api/slack/: card_builder.py  client.py  events_router.py  events_router_old.py  install_router.py  interactions_router.py  oauth_router.py  oauth_router_old.py  schemas.py  service.py  webhook_router.py  webhook_router_old.py
app/clients/: base_client.py  hubspot_client.py  hubspot_client_old.py  slack_client.py
app/connectors/: __init__.py  base.py  hubspot_connector.py  hubspot_connector_old.py  registry.py  slack_connector.py  slack_connector_old.py  token_manager.py
app/connectors/common/: base.py
app/core/: base_client.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: base_record.py  models.py  protocols.py  records.py  repository.py  storage_service.py  supabase.py  supabase_client.py
app/integrations/: ai_service.py  base.py  base_client.py  client.py  hubspot_cards.py  oauth.py  schemas.py  security.py  slack_integration.py  slack_ui.py  webhook.py
app/models/: integration.py
app/scripts/: demo.py
app/security/: hubspot_signature.py  slack_signature.py
app/services/: ai_engine.py  ai_service.py  channel_service.py  channel_service_old.py  command_service.py  command_service_old.py  contact_search_service.py  event_router.py  event_router_old.py  hubspot_service.py  integration_service.py  routing_service.py  slack_service.py  storage_service.py  task_service.py
app/utils/: cache.py  constants.py  helpers.py  parsers.py  slack_helpers.py  transformers.py  ui.py
scripts/: check_imports.py  demo.py  update_tier_status.py
tests/: conftest.py  test_ai_service.py  test_card_builder.py  test_channel_service.py  test_correlation_propagation.py  test_event_router.py  test_expansion_verified.py  test_fetch_engagements.py  test_hubspot_client.py  test_hubspot_models.py  test_integration_service.py  test_middleware.py  test_security.py  test_slack_connector.py  test_slash_parsers.py  test_storage_service.py  test_transformers.py  test_trial_logic.py  test_ui_insight.py
tests/clients/: hubspot_client.py
tests/connectors/: test_slack_connector.py
tests/factories/: hubspot_objects.py
tests/fixtures/: hubspot_webhooks.py  slack_events.py
tests/utils/: async_helpers.py  fake_http.py
(+89 files in other folders)
