[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-connectors"
version = "0.1.0"
description = "HubSpot Connector Platform for Slack"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.12.0",
    "uvicorn[standard]>=0.30.0",
    "tenacity>=8.0.0",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pyright>=1.1.389",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]  # Tells Hatch to look in the root directory for your code

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "D"]
ignore = ["D203", "D213"]

[tool.uv]
managed = true
