[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reha-connect"
version = "0.1.0"
description = "REHA Connect: HubSpot Connector Platform for Slack"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.12.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart",
    "slack-sdk>=3.40.0",
    "stripe>=14.4.0",
    "aiohttp>=3.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pyright>=1.1.389",
    "respx>=0.22.0",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D213", "D205", "D400", "D401", "D415", "D417", "PLC0415"]

[tool.uv]
managed = true

[tool.ruff.lint.pylint]
max-args = 8
